<resources>

    <string name="app_name">Exchange App</string>

    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario invaldo</string>
    <string name="invalid_password">La contraseña tiene que tener al menos 6 caracteres</string>
    <string name="login_failed">"Se ha producido un error"</string>
    <string name="login_error">"Usuario o contraseña incorrectos"</string>
    <string name="login_error_not_fount">"Usuario no registrado"</string>

    <string name="lb_cantidad">Cantidad</string>
    <string name="lb_coin">Moneda</string>
    <string name="lb_euros">Euros</string>
    <string name="lb_recover_password">¿Has olvidado tu contraseña?</string>

    <string name="service_recover">Se ha enviado un correo para reestablecer la contraseña</string>
    <string name="error_service">Se ha producido un error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_company_main">Exchange app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_customer_main">CustomerMainActivity</string>
    <string name="title_activity_customer">CustomerActivity</string>

    <string name="lb_loading">Cargando datos…</string>
    <string name="lb_loading_office">Buscando establecimientos…</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
