<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent"
                                           android:padding="20dp">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <ImageView android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:layout_gravity="center"
                       android:layout_marginBottom="20dp"
                       android:src="@drawable/ic_logo"
                       android:contentDescription="@string/welcome"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/welcome"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="20dp"
                    android:textSize="22sp"/>


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"

                          android:orientation="vertical">

                <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   app:cardCornerRadius="15dp"
                                                   app:cardElevation="10dp"
                                                   android:layout_marginTop="20dp"
                                                   android:layout_marginLeft="15dp"
                                                   android:layout_marginRight="15dp">
                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/prompt_email"
                              android:inputType="textEmailAddress"
                              android:background="@android:color/transparent"
                              android:gravity="center"
                              android:textSize="17sp"
                              android:paddingTop="10dp"
                              android:paddingBottom="10dp"
                              android:paddingLeft="10dp"
                              android:paddingRight="10dp"
                              android:id="@+id/tv_email"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   app:cardCornerRadius="15dp"
                                                   app:cardElevation="10dp"
                                                   android:layout_marginTop="15dp"
                                                   android:layout_marginLeft="15dp"
                                                   android:layout_marginRight="15dp">

                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/prompt_password"
                              android:inputType="textPassword"
                              android:background="@android:color/transparent"
                              android:gravity="center"
                              android:textSize="17sp"
                              android:text=""
                              android:paddingTop="10dp"
                              android:paddingBottom="10dp"
                              android:paddingLeft="10dp"
                              android:paddingRight="10dp"
                              android:id="@+id/tv_password"/>

                </androidx.cardview.widget.CardView>


                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="end"
                          android:padding="10dp"
                          android:id="@+id/tv_recoverpassword"
                          android:text="@string/lb_recover_password"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                               android:layout_height="wrap_content"
                                               app:contentPadding="10dp"
                                               app:cardCornerRadius="15dp"
                                               android:layout_marginTop="15dp"
                                               android:layout_marginRight="15dp"
                                               android:layout_marginLeft="15dp"
                                               android:clickable="true"
                                               android:focusable="true"
                                               android:foreground="?android:attr/selectableItemBackground"
                                               android:background="?android:attr/selectableItemBackground"
                                               app:cardBackgroundColor="@color/colorPrimary"
                                               android:id="@+id/btn_login">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:textColor="@android:color/white"
                          android:text="@string/action_sign_in_short"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="#C8FFFFFF"
                  android:gravity="center"
                  android:visibility="gone"
                  android:id="@+id/ly_progress">

        <ProgressBar android:layout_width="60dp"
                     android:layout_height="60dp"/>

    </LinearLayout>

</RelativeLayout>