<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/ly_content_exchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/rubik_regular"
                        android:text="1 euro equivale a"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_target_coin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rubik_regular"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="30sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/rubik_regular"
                        android:text="last update"/>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/lineChar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:minHeight="200dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/InputTextLy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:hint="@string/lb_cantidad">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tv_euros"
                                style="@style/TextInput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="0dp"
                                android:inputType="numberDecimal"
                                android:text="1"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/InputTextLy"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="@string/lb_coin">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/TextInput"
                                android:enabled="false"
                                android:textColor="@android:color/black"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/lb_euros"/>
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <com.google.android.material.textfield.TextInputLayout

                            style="@style/InputTextLy"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:hint="Cantidad">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tv_coin"
                                style="@style/TextInput"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:inputType="numberDecimal"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/InputTextLy"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:hint="Moneda">

                            <com.google.android.material.textfield.TextInputEditText
                                style="@style/TextInput"
                                android:enabled="false"
                                android:textColor="@android:color/black"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="Ecuador"/>
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/btnCreateCoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ly_content_exchange"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="15dp"
                app:contentPadding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rubik_regular"
                    android:text="Crear coin"
                    android:textColor="@android:color/white"/>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ly_progress"
        android:background="#C9FFFFFF"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
    </LinearLayout>
</RelativeLayout>